# edge-tutor

./: .gitignore  CLAUDE.md  EdgeTutor_MVP_Unified.md  LICENSE  PROJECT.md  README.md  SESSION.md  edgetutor_setup.ps1  requirements-phase1.txt  requirements.txt  todo.md
android-mnn/app/: CMakeLists.txt  build.gradle.kts
android-mnn/app/src/main/: AndroidManifest.xml
android-mnn/app/src/main/assets/: README.txt
android-mnn/app/src/main/cpp/: edgetutor_jni.cpp
android-mnn/app/src/main/java/com/edgetutor/mnn/: ChatAdapter.kt  DocumentLibraryAdapter.kt  FullScreenImageDialog.kt  MainActivity.kt  SessionAdapter.kt
android-mnn/app/src/main/java/com/edgetutor/mnn/attachments/: ImageAttachmentStore.kt
android-mnn/app/src/main/java/com/edgetutor/mnn/ingestion/: Embedder.kt  PdfExtractor.kt  TextChunker.kt  (+1 more)
android-mnn/app/src/main/jniLibs/arm64-v8a/: README.txt
android-mnn/app/src/main/res/drawable/: bg_chat_user.xml  bg_error.xml  bg_image_preview.xml  bg_mode_toggle.xml  bg_remove.xml  bg_send.xml  bg_source.xml  bg_thinking.xml  ic_book.xml  ic_camera.xml  ic_chat.xml  ic_close.xml  ic_down.xml  ic_image.xml  ic_import.xml  ic_launcher_foreground.xml  ic_menu.xml  ic_plus.xml  ic_send.xml  ic_settings.xml  ic_stop.xml  ic_think.xml  ic_trash.xml
android-mnn/app/src/main/res/layout/: activity_main.xml  item_library_document.xml  item_message_assistant.xml  item_message_user.xml  item_session.xml
android-mnn/app/src/main/res/menu/: menu_main.xml
android-mnn/app/src/main/res/values/: colors.xml  themes.xml
android-mnn/app/src/main/res/xml/: file_paths.xml
(+148 files in other folders)
